@@ -10,8 +10,9 @@ from fastflix.encoders.common.setting_panel import SettingPanel
 from fastflix.language import t
 from fastflix.models.encode import x265Settings
 from fastflix.models.fastflix_app import FastFlixApp
-from fastflix.resources import warning_icon
+from fastflix.resources import warning_icon, loading_movie
 from fastflix.shared import link
+from fastflix.widgets.background_tasks import ExtractHDR10
 
 logger = logging.getLogger("fastflix")
 
@@ -63,6 +64,7 @@ def get_breaker():
 
 class HEVC(SettingPanel):
     profile_name = "x265"
+    hdr10plus_signal = QtCore.Signal(str)
 
     def __init__(self, parent, main, app: FastFlixApp):
         super().__init__(parent, main, app)
@@ -73,6 +75,7 @@ class HEVC(SettingPanel):
 
         self.mode = "CRF"
         self.updating_settings = False
+        self.extract_thread = None
 
         grid.addLayout(self.init_preset(), 0, 0, 1, 2)
         grid.addLayout(self.init_tune(), 1, 0, 1, 2)
@@ -127,6 +130,7 @@ class HEVC(SettingPanel):
 
         grid.addWidget(guide_label, 12, 0, 1, 6)
 
+        self.hdr10plus_signal.connect(self.done_hdr10plus_extract)
         self.setLayout(grid)
         self.hide()
 
@@ -151,9 +155,38 @@ class HEVC(SettingPanel):
         icon = QtGui.QIcon(warning_icon)
         label.setPixmap(icon.pixmap(22))
         layout = QtWidgets.QHBoxLayout()
+
+        self.extract_button = QtWidgets.QPushButton(t("Extract HDR10+"))
+        self.extract_button.hide()
+        self.extract_button.clicked.connect(self.extract_hdr10plus)
+
+        self.extract_label = QtWidgets.QLabel(self)
+        self.extract_label.hide()
+        self.movie = QtGui.QMovie(loading_movie)
+        self.movie.setScaledSize(QtCore.QSize(25, 25))
+        self.extract_label.setMovie(self.movie)
+
+        layout.addWidget(self.extract_button)
+        layout.addWidget(self.extract_label)
+
         layout.addWidget(label)
         layout.addLayout(self.init_dhdr10_opt())
         return layout
+
+    def extract_hdr10plus(self):
+        self.extract_button.hide()
+        self.extract_label.show()
+        self.movie.start()
+        # self.extracting_hdr10 = True
+        self.extract_thrad = ExtractHDR10(self.app, self.main, signal=self.hdr10plus_signal)
+        self.extract_thrad.start()
+
+    def done_hdr10plus_extract(self, metadata: str):
+        self.extract_button.show()
+        self.extract_label.hide()
+        self.movie.stop()
+        if Path(metadata).exists():
+            self.widgets.hdr10plus_metadata.setText(metadata)
 
     def init_x265_row(self):
         layout = QtWidgets.QHBoxLayout()
@@ -511,6 +544,15 @@ class HEVC(SettingPanel):
     def new_source(self):
         super().new_source()
         self.setting_change()
+        if self.app.fastflix.current_video.hdr10_plus:
+            self.extract_button.show()
+        else:
+            self.extract_button.hide()
+        if self.extract_thread:
+            try:
+                self.extract_thread.terminate()
+            except Exception:
+                pass
 
     def update_video_encoder_settings(self):
         if not self.app.fastflix.current_video:
