@@ -3,7 +3,7 @@ import logging
 import os
 import re
 from pathlib import Path
-from subprocess import PIPE, CompletedProcess, TimeoutExpired, run
+from subprocess import PIPE, CompletedProcess, TimeoutExpired, run, Popen
 from typing import List, Tuple, Union
 
 import reusables
@@ -443,3 +443,51 @@ def parse_hdr_details(app: FastFlixApp, **_):
     else:
         app.fastflix.current_video.master_display = master_display
         app.fastflix.current_video.cll = cll
+
+
+def detect_hdr10_plus(app: FastFlixApp, config: Config, **_):
+    if (
+        not app.fastflix.current_video.master_display
+        or not config.hdr10plus_parser
+        or not config.hdr10plus_parser.exists()
+    ):
+        return
+
+    process = Popen(
+        [
+            config.ffmpeg,
+            "-y",
+            "-i",
+            unixy(app.fastflix.current_video.source),
+            "-map",
+            f"0:v",
+            "-loglevel",
+            "panic",
+            "-c:v",
+            "copy",
+            "-vbsf",
+            "hevc_mp4toannexb",
+            "-f",
+            "hevc",
+            "-",
+        ],
+        stdout=PIPE,
+        stderr=PIPE,
+        stdin=PIPE,  # FFmpeg can try to read stdin and wrecks havoc
+    )
+
+    process_two = Popen(
+        [config.hdr10plus_parser, "--verify", "-"],
+        stdout=PIPE,
+        stderr=PIPE,
+        stdin=process.stdout,
+        encoding="utf-8",
+    )
+
+    try:
+        stdout, stderr = process_two.communicate()
+    except Exception:
+        logger.exception("Unexpected error while trying to detect HDR10+ metdata")
+    else:
+        if "Dynamic HDR10+ metadata detected." in stdout:
+            app.fastflix.current_video.hdr10_plus = True
