@@ -2,8 +2,10 @@
 
 ## Version 4.2.0
 
+* Adding ability to extract HDR10+ metadata
 * Adding #178 selector for number of autocrop positions throughout video (thanks to bmcassagne)
 * Fixing #180 Minor UI glitch, custom bitrate retains "k" when edited from queue (thanks to Etz)
+* Fixing custom QP crashes FastFlix (thanks to J-mas)
 
 ## Version 4.1.1
 
